welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:23: error: Unit does not take parameters
		setCouleurBrosse(D(k));
                                  ^